--- a/src/components/ItemListContainer/Clicker.scss
+++ b/src/components/ItemListContainer/Clicker.scss
@@ -63,14 +63,34 @@
   color: #ffffff;
   background-color: #0a3d20;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 15px;
   cursor: pointer;
   padding: 10px;
-  width: 170px;
+  width: 120px;
+  height: 55px;
 }
 
 .boton_agregar:hover {
   background-color: #106a29;
+  color: #ffffff;
+  transition: 0.3s;
+}
+
+
+.boton_container .boton_detalles {
+  border-radius: 7px;
+  color: #ffffff;
+  background-color: #c6c6c69c;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 10px;
+  width: 55px;
+  height: 55px;
+}
+
+.boton_detalles:hover {
+  background-color: #d15107;
   color: #ffffff;
   transition: 0.3s;
 }
