--- a/src/components/ItemCounter/ItemCounter.scss
+++ b/src/components/ItemCounter/ItemCounter.scss
@@ -1,7 +1,32 @@
 .contador {
     display: flex;
-    flex-direction: row;
+    flex-direction:unset;
     align-items: center;
     align-content: center;
-    margin:100 auto;
+    margin: 100 auto;
+  }
+
+
+  .btn {
+    margin: 0 auto;
+    height: 55px;
+    width: 55px;
+    border-radius: 8px;
+  }
+
+  .btn-agregar {
+    margin: 0 auto;
+    height: 55px;
+    width: 230px;
+    background-color: rgb(64, 156, 64);
+    color: white;
+    border-radius: 8px;
+    border-color: rgb(64, 156, 64);
+  }
+
+  .btn-agregar:hover {
+    background-color: rgb(71, 192, 71);
+    border-color: rgb(5, 173, 5);
+    color: rgb(231, 231, 231);
+    
   }
