ultimos ajustes para entrega 2

--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -12,6 +12,7 @@
       padding: 5px;
       color:#143900;
       background-color: white;
+      font-weight: 100;
     }
 
     .introduccion h2{
