--- a/src/components/MenuInicio/MenuInicio.scss
+++ b/src/components/MenuInicio/MenuInicio.scss
@@ -27,6 +27,13 @@
 
 }
 
+.container-inicio{
+    margin: 0 auto;
+    padding-top: 30px;
+    padding-bottom: 40px;
+}
+
+
 .intro {
     font-size: 25px;
     background-color: rgb(42, 42, 42);
