--- a/src/components/ItemDetailContainer/ItemDetailContainer.scss
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.scss
@@ -1,5 +1,6 @@
-.container {
-    margin-left: 50px;
-    padding-top: 30px;
+.container-producto {
+    margin-left: 30px;
+    padding-top: 20px;
     padding-bottom: 40px;
+    width: 1350px;
 }
