--- a/css/Clicker.css
+++ b/css/Clicker.css
@@ -1,11 +1,10 @@
-/* BOTON ITEM */
 /* ITEM LIST CONTAINER */
 .boton_container .boton_sumar {
   border-radius: 7px;
   color: #ffffff;
   background-color: #10c01f;
   font-weight: bold;
-  font-size: 23px;
+  font-size: 18px;
   cursor: pointer;
   padding: 10px;
 }
@@ -21,7 +20,7 @@
   color: #ffffff;
   background-color: #e72424;
   font-weight: bold;
-  font-size: 23px;
+  font-size: 18px;
   cursor: pointer;
   padding: 10px;
 }
@@ -37,7 +36,7 @@
   color: #ffffff;
   background-color: #7f7f7f;
   font-weight: bold;
-  font-size: 23px;
+  font-size: 18px;
   cursor: pointer;
   padding: 10px;
 }
@@ -50,11 +49,11 @@
 
 .boton_container .contador {
   border-radius: 7px;
-  margin-top: 10px;
-  font-size: 23px;
+  margin-top: 15px;
+  font-size: 20px;
   font-weight: bold;
-  padding-bottom: 80px;
-  padding: 10px;
+  padding-bottom: 10px;
+  padding: 5px;
 }
 
 .boton_container .boton_agregar {
@@ -62,14 +61,33 @@
   color: #ffffff;
   background-color: #0a3d20;
   font-weight: bold;
-  font-size: 29px;
+  font-size: 15px;
   cursor: pointer;
   padding: 10px;
-  width: 220px;
+  width: 120px;
+  height: 55px;
 }
 
 .boton_agregar:hover {
   background-color: #106a29;
+  color: #ffffff;
+  transition: 0.3s;
+}
+
+.boton_container .boton_detalles {
+  border-radius: 7px;
+  color: #ffffff;
+  background-color: rgba(198, 198, 198, 0.6117647059);
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 10px;
+  width: 55px;
+  height: 55px;
+}
+
+.boton_detalles:hover {
+  background-color: #d15107;
   color: #ffffff;
   transition: 0.3s;
 }/*# sourceMappingURL=Clicker.css.map */
