--- a/css/Intro.css
+++ b/css/Intro.css
@@ -1,17 +1,20 @@
 /* INTRO */
-.intro {
+.introduccion {
   text-align: center;
   font-size: 15px;
   padding: 30px;
   color: #143900;
+  background-color: white;
 }
-.intro .intro h1 {
+.introduccion .introduccion h1 {
   text-align: center;
   font-size: 20px;
   padding: 5px;
   color: #143900;
+  background-color: white;
+  font-weight: 100;
 }
-.intro .intro h2 {
+.introduccion .introduccion h2 {
   text-align: center;
   font-size: 25px;
   padding: 10px;
