arreglo en hojas Contactos y Registro

--- a/css/Contacto.css
+++ b/css/Contacto.css
@@ -1,22 +1,6 @@
-.body {
-  background-position: center;
-}
-
-.fondo-body {
-  background-color: rgba(255, 255, 255, 0.4470588235);
-  padding: 0px;
-  margin: 0px;
-}
-
-.introduccion {
-  padding-bottom: 1px;
-}
-
-.form-group {
-  padding: 5px;
-  padding-left: 60px;
-  padding-right: 60px;
-  background-color: #201f24;
+.intro-form {
+  width: 320px;
+  margin: 0 auto;
 }
 
 .contacto {
@@ -30,54 +14,6 @@
   margin: 50px auto;
 }
 
-.container-form {
-  margin: 0px;
-  background-color: rgb(240, 239, 239);
-}
-
-.botones-form {
-  text-align: center;
-  padding: 30px;
-  background-color: #201f24;
-}
-
-.boton-form-enviar {
-  background-color: #215f02;
-  color: white;
-  width: 180px;
-  height: 50px;
-  border-radius: 8px;
-  margin: 15px;
-}
-
-.boton-form-enviar:hover {
-  background-color: #42af0c;
-}
-
-.boton-form-cancelar {
-  background-color: #d61313;
-  color: white;
-  width: 100px;
-  height: 50px;
-  border-radius: 8px;
-  margin: 5px;
-}
-
-.boton-form-cancelar:hover {
-  background-color: #5f0202;
-}
-
-.boton-form-reset {
-  background-color: #aaaaaa;
-  width: 100px;
-  height: 50px;
-  border-radius: 8px;
-}
-
-.boton-form-reset:hover {
-  background-color: #7a7979;
-}
-
 .contactanos {
   background-color: rgb(42, 42, 42);
   text-align: center;
@@ -87,7 +23,36 @@
   padding-top: 30px;
 }
 
-.hr {
+.contacto .container-form {
   background-color: rgb(42, 42, 42);
-  background-color: rgb(42, 42, 42);
+  height: 1450px;
+}
+
+.bot {
+  text-align: center;
+}
+
+.div .form-group {
+  font-size: 90px;
+  height: 100px;
+}
+
+.label {
+  font-size: 13px;
+  padding-top: 15px;
+}
+
+.boton-form-enviar {
+  background-color: #0512c6;
+  color: white;
+  width: 30%;
+  height: 50px;
+  border-radius: 10px;
+  border-color: #101ff8;
+}
+
+.boton-form-enviar:hover {
+  background-color: #3bc849;
+  color: rgb(0, 0, 0);
+  border-color: #707070;
 }/*# sourceMappingURL=Contacto.css.map */
