--- a/src/components/MenuInicio/MenuInicio.scss
+++ b/src/components/MenuInicio/MenuInicio.scss
@@ -33,7 +33,7 @@
     font-weight: bold;
     border-radius: 15px;
     color:#ffffff;
-    box-shadow: 0 0.188em 1.550em rgb(51, 51, 51)
+    box-shadow: 0 0.188em 1.50em rgb(51, 51, 51)
 }
 
 .container-form {
@@ -112,14 +112,20 @@
 }
 
 .form-group input {
-    font-size: 20px;
+    font-size: 18px;
     background-color: white;
     height: 45px;
     width: 100%;
     border-radius: 0.25em;
-    text-align: center;
-
+    text-align: left;
+    color: black;
 }
+
+.form-group input:hover {
+    background-color: #c2c6fed9;
+    color: #2734e0;
+}
+
 input:focus {
     outline-color: rgb(42, 42, 42);
 }
