--- a/css/CardWidget.css
+++ b/css/CardWidget.css
@@ -10,7 +10,9 @@
 .CardWidget:hover {
   color: #bababa;
   transition: 0.3s;
-  background-color: rgb(115, 56, 11);
+  background-color: rgb(42, 42, 42);
+  border-top: 2px solid rgb(86, 86, 86);
+  border-bottom: 2px solid rgb(86, 86, 86);
   border-radius: solid 10px;
   font-size: 23px;
 }
