--- a/src/components/Contacto/Contacto.scss
+++ b/src/components/Contacto/Contacto.scss
@@ -12,6 +12,7 @@
   box-shadow: inset 1px 1px 1px 1px;
   color:#ffffff;
   margin: 50px auto;
+  height: 1600px;
 }
 
 
@@ -31,9 +32,7 @@
 }
 
 
-.bot{
- text-align: center;
-}
+
 
 .div .form-group {
   font-size: 90px;
@@ -58,4 +57,9 @@
   background-color:#3bc849;
   color: rgb(0, 0, 0);
   border-color: #707070;
+}
+
+.botones-contacto {
+  padding-top: 20px;
+  padding-left: 150px;
 }
