--- a/src/components/MenuInicio/MenuInicio.scss
+++ b/src/components/MenuInicio/MenuInicio.scss
@@ -44,8 +44,10 @@
 
 .container-inicio{
     margin: 0 auto;
-    padding-top: 30px;
-    padding-bottom: 40px;
+    padding-top: 160px;
+    padding-bottom: 100px;
+    min-width: 120vh;
+
 }
 
 
