--- a/css/Contacto.css
+++ b/css/Contacto.css
@@ -12,6 +12,7 @@
   box-shadow: inset 1px 1px 1px 1px;
   color: #ffffff;
   margin: 50px auto;
+  height: 1600px;
 }
 
 .contactanos {
@@ -26,10 +27,6 @@
 .contacto .container-form {
   background-color: rgb(42, 42, 42);
   height: 1450px;
-}
-
-.bot {
-  text-align: center;
 }
 
 .div .form-group {
@@ -55,4 +52,9 @@
   background-color: #3bc849;
   color: rgb(0, 0, 0);
   border-color: #707070;
+}
+
+.botones-contacto {
+  padding-top: 20px;
+  padding-left: 150px;
 }/*# sourceMappingURL=Contacto.css.map */
