--- a/css/ItemDetail.css
+++ b/css/ItemDetail.css
@@ -1,4 +1,5 @@
 .container-consola {
+  display: grid;
   background-color: rgb(42, 42, 42);
   color: white;
   width: 37%;
@@ -59,4 +60,27 @@
 .contador {
   display: flex;
   font-size: 20px;
+  padding-bottom: 25px;
+}
+
+.consola-categoria {
+  padding-top: 1px;
+  padding-bottom: 15px;
+}
+
+.boton-volver {
+  margin: 0 auto;
+  margin: 0 auto;
+  height: 55px;
+  width: 230px;
+  background-color: rgb(240, 240, 240);
+  color: rgb(0, 0, 0);
+  border-radius: 8px;
+  border-color: rgb(115, 115, 115);
+}
+
+.boton-volver:hover {
+  background-color: rgb(246, 71, 52);
+  color: rgb(255, 255, 255);
+  border-color: rgb(115, 115, 115);
 }/*# sourceMappingURL=ItemDetail.css.map */
