--- a/css/NavBar.css
+++ b/css/NavBar.css
@@ -2,12 +2,16 @@
 .header {
   background-color: rgb(42, 42, 42);
   color: azure;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
   /* LOGO */
   /* NAV */
 }
 .header .header_container {
   max-width: 100%;
-  height: 130px;
+  height: 70px;
   margin: 0 auto;
   padding: 10px 0;
   display: flex;
@@ -34,7 +38,15 @@
 .header .header_nav .header_link:hover {
   color: #bababa;
   transition: 0.3s;
-  background-color: rgb(115, 56, 11);
+  border-top: 2px solid rgb(86, 86, 86);
+  background-color: rgb(42, 42, 42);
   border-radius: solid 10px;
+  border-bottom: 2px solid rgb(86, 86, 86);
   font-size: 24px;
+}
+
+.buscador {
+  background-color: rgb(235, 235, 235);
+  color: white;
+  padding-left: 1489px;
 }/*# sourceMappingURL=NavBar.css.map */
