--- a/src/components/ItemDetailContainer/ItemDetailContainer.scss
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.scss
@@ -1,6 +1,7 @@
 .container-producto {
     margin-left: 30px;
-    padding-top: 20px;
+    padding-top: 90px;
     padding-bottom: 40px;
-    width: 1350px;
+    width: 1450px;
+    min-height: 100vh;
 }
