--- a/src/components/ItemListContainer/ItemListContainer.scss
+++ b/src/components/ItemListContainer/ItemListContainer.scss
@@ -1,4 +1,10 @@
 /* ITEM LIST CONTAINER */
+
+.container {
+  min-height: 100vh;
+  padding-top: 50px;
+}
+
 .container img{
   width: 150px;
   }
@@ -6,7 +12,7 @@
   .container .container{
     display: flex;
     flex-wrap: wrap;
-    gap: 4rem;
+    gap: 5rem;
     padding-top: 60px;
     padding-left: 1px;    
     padding-right: 50px;  
@@ -17,6 +23,6 @@
   }
 
   .container h3{
-   font-size: 22px;
+   font-size: 15px;
   }
   
