--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -2,10 +2,14 @@
 .header {
   background-color: rgb(42, 42, 42);
   color: azure;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
 
   .header_container {
     max-width: 100%;
-    height: 130px;
+    height: 70px;
     margin: 0 auto;
     padding: 10px 0;
     display: flex;
@@ -37,18 +41,20 @@
     .header_link:hover {
       color: #bababa;
       transition: 0.3s;
-      background-color: rgb(115, 56, 11);
+      border-top: 2px solid rgb(86, 86, 86);
+      background-color: rgb(42, 42, 42);
       border-radius: solid 10px;
+      border-bottom: 2px solid rgb(86, 86, 86);
       font-size: 24px;
     }
   }
 }
 
 
-
-
-
-
-
+.buscador {
+  background-color: rgb(235, 235, 235);
+  color: white;
+  padding-left: 1489px;
+}
 
 
